.pytest.out

=================================== ERRORS ====================================
_____________________ ERROR collecting tests/test_api.py ______________________
.venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\shahu\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\shahu\AppData\Local\Programs\Python\Python313\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\shahu\Documents\OneDrive\OPEN CLASSROOMS\PROJET 8\Scoring_Model_Enhanced\tests\test_api.py", line 363
E       response = client.post(\"/batch/predict\", json=data)
E                               ^
E   SyntaxError: unexpected character after line continuation character
________________ ERROR collecting tests/test_api_endpoints.py _________________
.venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\shahu\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\shahu\AppData\Local\Programs\Python\Python313\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\shahu\Documents\OneDrive\OPEN CLASSROOMS\PROJET 8\Scoring_Model_Enhanced\tests\test_api_endpoints.py", line 31
E       assert data[\"status\"] in [\"healthy\", \"unhealthy\"]
E                    ^
E   SyntaxError: unexpected character after line continuation character
_____________________ ERROR collecting tests/test_auth.py _____________________
ImportError while importing test module 'C:\Users\shahu\Documents\OneDrive\OPEN CLASSROOMS\PROJET 8\Scoring_Model_Enhanced\tests\test_auth.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Users\shahu\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\test_auth.py:4: in <module>
    from backend.auth import (
E   ImportError: cannot import name 'get_password_hash' from 'backend.auth' (C:\Users\shahu\Documents\OneDrive\OPEN CLASSROOMS\PROJET 8\Scoring_Model_Enhanced\backend\auth.py)
_____________________ ERROR collecting tests/test_crud.py _____________________
ImportError while importing test module 'C:\Users\shahu\Documents\OneDrive\OPEN CLASSROOMS\PROJET 8\Scoring_Model_Enhanced\tests\test_crud.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Users\shahu\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\test_crud.py:4: in <module>
    from backend.crud import (
E   ImportError: cannot import name 'create_user' from 'backend.crud' (C:\Users\shahu\Documents\OneDrive\OPEN CLASSROOMS\PROJET 8\Scoring_Model_Enhanced\backend\crud.py)
=========================== short test summary info ===========================
ERROR tests/test_api.py
ERROR tests/test_api_endpoints.py
ERROR tests/test_auth.py
ERROR tests/test_crud.py
!!!!!!!!!!!!!!!!!!! Interrupted: 4 errors during collection !!!!!!!!!!!!!!!!!!!
4 errors in 30.69s
